--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ ray = [
 ]
 python-snappy = { version = ">=0.6.0,<1.0.0", optional = true }
 thrift = { version = ">=0.13.0,<1.0.0", optional = true }
-mypy-boto3-glue = { version = ">=1.28.18", optional = true }
+mypy-boto3-glue = ">=1.28.18"
 boto3 = { version = ">=1.24.59", optional = true }
 s3fs = { version = ">=2023.1.0,<2024.1.0", optional = true }
 adlfs = { version = ">=2023.1.0,<2024.8.0", optional = true }
